siyaasi aadan cago

--- a/Sool.mw
+++ b/Sool.mw
@@ -1,5 +1,4 @@
-{{Infobox settlement
-|name                   =TAARIIKH NOLOLEEDKA AADAN CAGO 
+TAARIIKH NOLOLEEDKA AADAN CAGO 
 
 HISTORY OF ADAN CAGO. Date of birth 1985.
 
