Wuxuu dib u noqay badalkii oo sameeyay  [[Special:Contributions/154.115.221.187|154.115.221.187]] ([[User talk:154.115.221.187|talk]]) kuna celiyay badalkii ka  danbeeyay oo sameeyay  [[User:Lkiogbeeraha|Lkiogbeeraha]]

--- a/Sool.mw
+++ b/Sool.mw
@@ -1,28 +1,51 @@
-TAARIIKH NOLOLEEDKA AADAN CAGO 
+{{Infobox settlement
+|name                   =Sool
+|native_name            = 
+|other_name             =
+|nickname               = 
+|motto                  = 
+|settlement_type        =[[Gobol]]
+|image_skyline          =
+|imagesize              = 
+|image_caption          =
+|image_flag             = 
+|image_seal             = 
+|image_shield           = 
+|image_map              =Somalia  regions map Sool.png
+|mapsize                =250px
+|map_caption            =Waxay kaga taal bartamaha goobaha darawiish
+|coordinates_display    =inline,title
+|coordinates_region     =SO
+|subdivision_type       =Dalka
+|subdivision_name       =Bulshada darawiishta ka salaysneyd
+|subdivision_type1      =
+|subdivision_name1      =
+|seat_type              =Xarun
+|seat                   =[[Laascaanood]] (Dhanka maamulnimo)<br>[[Saaxdheer]] (dhanka garaadada)<br>[[Taleex]] (dhanka nuxurka)
+|government_type        = 
+|leader_title           = madax weyne
+|leader_name            = garaad saleebaan garaad maxamed
+|established_title      =  
+|established_date     magnitude         = 
+|area_total_km2         =
+|population_as_of       = 
+|population_note        = 
+|population_total       =
+|population_density_km2 = 
+|timezone               =[[Saacadda Afrikada Bari|EAT]]
+|utc_offset             = +3
+|latd=|latm|lats=|latNS=N
+|longd=|longm=|longs=|longEW=E	
+|elevation_m            = 
+|elevation_ft           = 
+|postal_code_type       =  
+|postal_code            =
+|area_code              =
+|website                = 
+|footnotes              = 
+}}
 
-HISTORY OF ADAN CAGO. Date of birth 1985.
-
-Kalabaydh birthplace.
-
-Sool region of birth.
-
-The work of a teacher & politician.
-
-Brief background:
-
-I have spent most of my life in the northern regions of Somalia, especially in the Sool region.
-
-There I studied at various levels and did my first job.
-
-Adan Cago ran for the National Assembly of the People's Republic of Somaliland in 2010, but he did not win.
-
-In 2013-2016 he was appointed secretary of the opposition party WADDANI in Sool region. From late 2016 to 2019, while still the secretary of the Sool region, he was a member of the national central council.
-
-Education: 1998-2006 - Abyan Middle School in Lascanod Somalia.
-
-2006 - 2010 high school llays educational academy lascanod somalia.
-
-2010 - 2014- Nugal University in Lascanod
+'''Sool''' waa gobol ku yaala bariga wadanka somalia, magaala madaxdeedina waa [[Las Anod|Laascaanood]]. Waxay xuduud laleedahay gobolada [[Togdheer]] [[Nugaal]] iyo [[Sanaag]] iyo waliba waxay xuduud la leedahay gobolka [[Bari (Gobol)|Bari]] ee dalka [[Soomaaliya]]. Wakhtigaa gumeysiga waxay ahayd xarunta daraawiishta. Boqortooyada Baharsame oo ah garaadka guud dhanka [[reer darawiish]] wuxuu ku nool yahay Sahdheer, ee koonfuurta Sool. Goobaha daraawiish ee ugu weyn ee la mid ah Jidbali, Fardhiddin, Qawlo iwm. waxay ka dhaceen bartamaha gobolka Sool.
 
 ==Hiddaha==
 Waa dhulkii daraawiishta iyo waxa ay waliba tahay deegaanada uu ka soo jeedo  [[Sayid Maxamed Cabdulle Xassan]]. Iyo ismacil mire cilmi. Gobolka Sool wuu kaga duwanyahay gobolada kale ee dalka, gobolkaan si buuxda ah looma soo gumeesaningobolka sool siiba degmada Taleex waa meeshii u horaysay ee Afrika diyaarad lagu soo weeraro waxaana ku soo weeraray gumaystihii Ingiriiska sanadkii 1920-kii. Taleex waxaa xoreeyey daraawiish.
