--- a/Template:Coord%2Fdisplay%2Ftitle.mw
+++ b/Template:Coord%2Fdisplay%2Ftitle.mw
@@ -1,2 +1,1 @@
-<span style="font-size: small;"><span id="coordinates">[[Isuduwe Habka Juqraafiga|Isuduwe]]: {{{1}}}</span></span><noinclude>{{template doc|Template:Coord/sub doc}}[[Category:template]][[sl:Predloga:Koord/prikaži/naslov]]
-</noinclude>
+<span style="font-size: small;"><span id="coordinates">[[Geographic coordinate system|Coordinates]]: {{{1}}}</span></span><noinclude>{{documentation|Template:Coord/sub doc}}</noinclude>
