--- a/Template:Coord%2Finput%2Fdec.mw
+++ b/Template:Coord%2Finput%2Fdec.mw
@@ -1,8 +1,8 @@
 <includeonly>{{#ifeq:{{{2}}}||{{Coord/input/error2|msg=missing longitude (dec format)|sort_ch=#}}|{{Coord/link
 |dec-lat={{{1}}}
 |dec-long={{{2}}}
-|dms-lat={{coord/dec2dms|{{{1}}}|N|S|{{coord/prec dec|{{{1}}}|{{{2}}}}}}}
-|dms-long={{coord/dec2dms|{{{2}}}|E|W|{{coord/prec dec|{{{1}}}|{{{2}}}}}}}
+|dms-lat={{Coord/dec2dms|{{{1}}}|N|S|{{Coord/prec dec|{{{1}}}|{{{2}}}}}}}
+|dms-long={{Coord/dec2dms|{{{2}}}|E|W|{{Coord/prec dec|{{{1}}}|{{{2}}}}}}}
 |param={{{1}}}_N_{{{2}}}_E_{{{3}}}
 |default={{#if:{{{format|}}}|{{{format}}}|dec}}
 |name={{{name|}}}}}<!-- 
@@ -13,5 +13,4 @@
 -->}}<!--
 --></includeonly><noinclude>
 {{documentation|Template:Coord/sub doc}}
-[[Category:Coord template]]
 </noinclude>
