*Empty MediaWiki Message*

--- a/Asharaaf.mw
+++ b/Asharaaf.mw
@@ -4,7 +4,7 @@
 | langs = [[Af-Soomaali]] iyo [[Af-Carabi]]
 | rels = [[Islaam]]
 }}
-'''Ashraaf''' waa qabiil Soomaaliyeed oo ka mid ah qabiilada tirada yar, waxay asal ahaan ka soo jeedaan carabta.<ref name=":1">https://www.justice.gov/sites/default/files/eoir/legacy/2013/06/11/asharaf%20clan.pdf
+'''Ashraaf''' waa qabiil Soomaaliyeed oo ka mid ah qabiilada ugu balaaran , waxay asal ahaan ka soo jeedaan carabta.<ref name=":1">https://www.justice.gov/sites/default/files/eoir/legacy/2013/06/11/asharaf%20clan.pdf
 
 Page 1
 Country Advice Somalia Somalia – SOM36945 – Asharaf clan – Feerfeer - Burukuur - Mandera Kenya - Ceelasha Biyaha – Al-Shabaab – Amputation – Recruitment – Ethiopian Invasion – Musa Zude Yalahow – Yaqshid 9 July 2010
@@ -12,6 +12,7 @@ Country Advice Somalia Somalia – SOM36945 – Asharaf clan – Feerfeer - Buru
 
 Clans in Somalia Report on a Lecture by Joakim Gundel, COI Workshop Vienna, 15 May 2009 (Revised Edition) published December 2009
 </ref> Abtiriskooda wuxuu ku tagaa illaa saxaabiga caan ka ah [[Cali Ibn Abi Dhaalib]] (RC) kaasoo ah Nabiga (SCWS) ina adeerkii, waxaana Dhashey [[Faadhimatu Sahraa]]' o ah Gabadhii Nabigeena Mohamed NNKH. Waxay u kala baxaan xasan iyo xuseen waxeyna ka soo jeedaan [[Cali ibn Abi Dhaalib]] iyo [[Faadumo Bintu Rasuul]].
+
 ==Meelaha uu dego==
 Qabiilka wuxuu degaa gobolada kunfureed sida degmooyinka Marka, Muqdisho ,Shalaanbood, Afgooye, Kismaayo, baydhabo,Hiiraan, eelboon, Moolimaad, Goofgaduud, Daafeet, Baardheere, Baqdaad, shonqolow, Saakow, Buulibatuulo, Jawaarey, bardaale, Rowlo Shariif, Asalan, Warqadey, Kal i Koorar, Sarmaan, Baaqey, xudur iyo magaloyin badan o halkan lagu so kobi karin. 
 meelaha taarikhiga ah ee beeshu dagto waxa kamid ah Jameecada Aw xaaji Isaaq Aadan degto [[Bagdaad (degmo)|baqdaad]], iyo Jameecada aw sheekh Mad dhaahir ee [[Jawaarey]], Rowlo ee uu aas'aasey Sharif Nuurow Aamin Barkhadle iyo sida Tuulada [[Sarmaan (tuulo)|Sarmaan]] oo ay Aas'aaseen shariif Cumar Wiyeed  Shariif Wardheere wiyeed iyo  shariif Abuukar Wiyeed oo ah Ilmo Shariif Wiyeed Shariif Cimran. Beesha asharaaf waxey ubadanyihin Koonfurta Soomaaliya.
