Waan kordhiyay fadlan haka saarin

--- a/Masiixiyad.mw
+++ b/Masiixiyad.mw
@@ -6,6 +6,56 @@ Diintan waxa udubdhexaad u ah [[Ciise Masiix]] (Christos), [[Baybalka]], iyo taa
 
 Baybalku guud ahaan waxa uu ka kooban yahay laba qaybood oo kala ah: [[Axdigii Hore]] (Tawraad) iyo [[Axdiga Cusub]] (Injiil). Weliba waxaa si gaar ah [[Injiil]] loogu sheegaa mid kasta oo ka mid ah afarta buug ee ugu horreeya Axdiga Cusub.
 
+
+=== Afarta "Injiil" (The Four Gospels) ===
+Afarta "Injiil" ee qaanuuniga ah waa afarta buug oo sidaan Qoraalkii hore kusoo aragnay ay ku kala magacaaban yihiin afarta nin oo la kala yiraahdo: Matayos, Markos, Lukos, iyo John oo ay u yaqaannaan kiristaanku (Yooxana). Sidaan horay usoo sheegnayna, afartaas buug ayaa laf-dhabar u ah caqiidada kiristaanka. Waxaana in la xuso mudan inuu jiro shaki iyo muran la xiriira cidda dhab ahaan qortay buugaagtaas iyo taariikhda la qorayba.
+{| class="wikitable"
+|
+|-
+|Shirkii (Nicea) ee lagu go'aamiyay
+ilaahnimada Ciise-masiix
+|}
+Sababta ay buugaastaas laf-dhabarka ugu noqdeen caqiidada kiristaankana waa ayadoo sannadkii 325kii miilaadka, lagu ansixiyay afartaas buug shir diineed ay isugu yimaadeen hogaamiyeyaashii kiristaanka ee xilligaas. Shirkaas oo loo yaqaan (Council of Nicea)¹. Waxaa shirkaas in la'isugu yimaado sabab u ahaa ayadoo ay jirtay dood adag oo kiristaankii xilligaas jiray ka dhex taagnayd. Doodaas oo ku saabsanayd ilaahnimada nabi Ciise (nabadgalyo dushiisa ha ahaatee). Waxaana la'isku haystay Ciise waa ilaaا iyo ilaah ma'ahane wuxuu ahaa qof abnii-aadam ah oo Ilaahay uu soo diray.
+
+Dooddaas markii ay xoogaysatay ayaa boqorkii waagaas xukumayay dowladda Roomaanka oo dadka kiristaanka ah ay xukunkiisa ku hoos noolaayeen, wuxuu amar ku bixiyay in la qabto shir looga doodo arrintaan. Boqorkaas oo la oran jiray (Constantine) ama Konistantiin wuxuu ahaa boqorrada Roomaanka ah koodii ugu horreeyay ee qaatay caqiidada kiristaanka. Dowladda Roomaankana wixii intaas ka horreeyay waxay ahayd dowlad (wathani) ah oo haysata diin aan wax xiriir ah la lahayn diimaha towxiidka. Boqor Konistantiin shirkaas uu culimadii kiristaanka u qabtay waxaa la sheegaa inay kasoo qayb galeen ilaa 2048 qof oo ka kala yimid dhulka baaxadda wayn ee ay ka talinaysay dowladdii Roomaanka. Wufuudda halkaas isugu timid
+
+<span name="more"></span>waxaa u dhexeeyay khilaaf aad u wayn. Waxayna kala wateen bayballo iyo buugaag kala duwan oo qolaba ay tixraac uga dhiganaysay wixii ay aaminsanayd.
+
+Culimada aaminsan ilaahnimada ciise oo madashii shirkaas kasoo qayb galayna waxaa la sheegay inay ahaayeen 318 qof (tira ahaan 15% ka mid ah dadka madasha isugu yimid). Laakiin hadana ayagoo sidaas u tira yar, waxaa ra'yigoodii xoojiyay mawqifka boqor Konistantiin oo asaga ay la toosanyd fikradda ilaahyada badan. Sababtoo ah wuxuu boqorkaas kasoo jeeday mujtamac wathani ah oo ilaahyada badan ay agtiisa caadi ka yihiin. Sidaas darteed Konistantiin wuxuu garab istaagay kooxdii aaminsanayd inuu nabi Ciise yahay wiilka Ilaahay, hadana uu asagu laftirkiisu yahay i<span name="more"></span>laah.
+
+Shirkiina waxaa lagusoo xiray go'aanno ay ugu muhiimsan yihiin: qiritaanka ilaahnimada Ciise-masiix, iyo ahaanshaha uu yahay wiilka Ilaahay. Waxaa sidoo kale shirkaas lagu go'aamiyay in la qaato afarta buug oo firkrad ahaan taagayraysa ilaahimada Ciise-masiix. Afartaas buug oo ah kuwa hada loo yaqaan Afarta "Injiil".
+
+Markii la qaatay afartaas buug, ayaa amar lagu bixiyay in la gubo dhamaan qoraalladii iyo buugaagtii ay wateen culimadii kasoo hor jeedday iilaahnimada nabi Ciise (nabadgalyo korkiisa ha ahaatee). Inta aan afartaas buug la xulinna, waxaa halkaa isugu yimid dad kala wata ilaa 50 buug oo kala duwan. Waxaa amar lagu bixiyay marka in la gubo dhammaan wixii aan ahayn afartaas buug. Islmarkaasna la dilo qofkii lagu qabto asagoo haysta buug khilaafsan afarta buug oo shirka laga ansixiyay. Maalinkaas wixii ka dambeeyayna waxaa dhidibbada loo aasay diinta kiristaanka ah ee maanta dunida ka jirta. Fikrad walba oo kasoo hor jeedda ra'yiga ay qabto kaniisadda afartaas buug ku dhisanna  daaqaddaa laga tuuray, waxaana loo diiday inay soo baxdo.
+
+Saxnaanta iyo toosnaanta afart buug ee la'isku yiraahdo Afarta "Injiilna" waxaa diidaya dhow arrimood:
+
+1- Markii dhanka diinta Islaamka laga fiiriyo, ma jiraan wax ka yimid Ilaah xagiis oo hadana sheegaya inuu jiro ilaah aan ahayn Ilaaha dhabta ah, halkana ah ee koonka abuuray, rasuulladana soo diray. Sidoo kale Quraanka kariimka ah dhexdiisa waxaa ku xusan in nabi Ciise uu reer banii-israa'iil oo ah dadkii loo diray ugu yeeray inay caabudaan Ilaahay kaligiis. Ilaahay (SW) wuxuu leeyahay:
+
+'''وقال المسيح يا بني اسرائيل اعبدوا الله ربي وربكم إنه من يشرك بالله فقد حرم الله عليه الجنة ومأواه النار'''| المائدة: 72
+
+(... wuxuuna Masiixu yiri: reer banii-israa'iilow caabuda Ilaahay [oo ah] rabbigayga iyo rabbigiinnaba. Xaalkuna wuxuu yahay in qofkii u shariik yeela Ilaahay uu asaga Ilaahay ka xarrimay jannada, hoygiisuna uu yahay naarta ...).
+
+Guud ahaanna, Quraanka kariimka ah si faahfaahsan oo qotodheer ayuu uga hadlay nabi Ciise (nabadgalyo dushiisa ha ahaatee). Wuxuu ka hadlay mucjisadii dhalashadiisa oo astaan u ah sarraynta, kalinimada iyo awoodda Ilaaha xaqa ah ee aan koonka lala wadaagin. Wuxuu ka hadlay daahirsanaanta hooyadiis Maryam. Wuxuu ka hadlay nabinamadiisa iyo calaamadihii waawaynaa oo Ilaahay uu siiyay asaga. Sida inuu Ilaahay idankiis ku bogsiiyo dadka baraska qaba, kuwa aan wax arkin, iyo kuwa aan hadli karin. Inuu Ilaahay idankiis kusoo nooleeyo dad dhintay, iyo mucjisooyin kale oo badan.
+
+2- Dhanka taariikhda ma jiraan wax sugi kara in afarta nin oo ku magacaaban inay buugaagstaas qoreen, ay xaqiiqo ahaan yihiin dadka qoray buugaagtaas. Waxaana jira kala go' xagga silsiladda sanadka ah ee buugaagtaas (macnaha taxanaha dadka warinaya buugaagtaas iyo kuwa laga wariyayba). Mana ay jirto silsilad sanad ah oo gaaraysa ragga ku magacaaban buugaagtaas. Sidaas darteed dood iyo sahki ayaa hareeyay cidda xaqiiqa ahaan iska leh qorista buugtaas.
+
+3- Afartaas buug ayaga dhexdooda ayaa iska hor imaanaya oo is duqaynaya. Sida la yaqaanna, Ilaahay xagiisa marnaba kama yimaado waxyi is khilaafsan oo iska hor imaanaya.
+
+4- Waxaa sugan inuu jiro kitaab Injiil ah oo uu Ilaahay u waxyooday nabi Ciise. Sidaas darteed waxa kaliya oo lagu shaki bixi karo waa in la helo kitaabkaas asaga ah. Laakiin nasiib darro, marba hadii kaniisaddu ay gubtay dhammaan kutabadii ka hor imaanayay afartaan buug oo taladii Konistantin lagu ansixayay, waxaa meesha ka baxday fursaddii lagu heli lahaa Injiilkii dhabta ahaa ee nabi Ciise (nabadgalyo dushiisa ha ahaate).
+
+Sababaha asaasiga ah ee ka danbeeyay baddalitaanka diintii uu nabi Ciise la yimidna waxaa ka mid ah, ayadoo marka koowaad dadkii nabi Ciise raacay ay la kulmeen cadaadis iyo silcin xad dhaaf ah oo ka imaanayay dhankii yuhuudda iyo dhankii dowladda Roomaanka labadaba. Cadaadiskaas iyo dhibkaas oo ugu yaraan saddex qarni socday. Muddadaas gudeheedana hadba waxbaa laga badalayay diintii dhabta ahayd ee nabi Ciise uu la yimid.
+
+Waxaa kale oo meesha ku jira dowrkii waynaa oo shakhsiga ay kiristaanku u yaqaannaan (Rasuul Bawloos) ama (Paul The Apostle) uu ka qaatay rogitaanka Injilkii nabi Ciise iyo risaaladii loo soo dhiibay. Sababtoo ah ninkaan taariikh ahaan waxaa sugan inuu ahaa nin yuhuud ah oo aad ula dagaallaamay dadkii nabi Ciise raacay. Qayb aad u wayn ayuuna ka qaatay silcintii iyo cadaadiskii dadkaas loo gaystay. Intaas asagoo u gaystay dadkii nabi Ciise raacay,  ayuu hadana si kadis ah wuxuu isugu rogay nin sheeganaya inuu Ciise aaminay, oo rumeeyay. Wuxuuna sheegtay in Ciise laftirkiisa uu la hadlay una sheegay inuu wiilkii Ilaahay yahay, amrayna inuu u adeego diinta kiristaanta. Sida la aaminsan yahayna, ninkaan Bawloos la yiraahdo waa ninka dhalan-rogidda iyo taxriifka ugu wayn u gaystay risaaladii nabi Ciise (nabadgalyo dushiisa ha ahaatee)
+
+Arrimahaas oo wada jira marka waxay cadayn u yihiin in buugaagta loo yaqaan Afarta "Injiil" aysan ahayn waxyi ka yimid Ilaahay xagiis.
+
+Waxaana in la xasuusto mudan in cilladda haysta baybalka aysan ku koobnayn afartaan buug oo kaliya ama buugaagta Cahdiga Cusub, balse ay tahay mid sidoo kale ku jirta baybalka qaybtiisa loo yaqaan Cahdiga Hore.
+
+_________________________
+
+1- Wakhtiga xaadirka ah magaaladaas magaceeda waxaa la yiraahdaa Iznik, waxayna khariidad ahaan raacsan tahay jamhuuriyada Turkiga.
+
+
 * [https://www.wordplanet.org/so/index.htm Kitaabka quduska]
 
 [[Category:Masiixiyad| ]]
