--- a/Saaxil.mw
+++ b/Saaxil.mw
@@ -12,7 +12,7 @@
 |image_flag             = 
 |image_seal             = 
 |image_shield           = 
-|image_map              =Somaliland regions map Saahil.png
+|image_map              = Saaxil.svg
 |mapsize                =250px
 |map_caption            =Waxay Somaliland kaga taal.
 |coordinates_display    =inline,title
