*Empty MediaWiki Message*

--- a/Biyo_kulule.mw
+++ b/Biyo_kulule.mw
@@ -1,6 +1,7 @@
 {{Infobox port
 | name = Biyo kulule
-| image = [[File:Angle view of Biyo Kulule.jpg|Dalxiisayaal lugaynaya biyo kulule]]
+| image = [[File:Angle view of Biyo Kulule.jpg|thumb| 
+Dalxiisayaal lugaynaya biyo kulule]]
 
 | imagesize = 250
 
