--- a/Beesha_Bahsanbuur.mw
+++ b/Beesha_Bahsanbuur.mw
@@ -52,6 +52,8 @@ Ragan wa kuwi xoreeyay s.alnd gaar ahan ceerigaabo
 *muj.sicid salax dibow
 *muj.awoowe jirdagale
 Sidoo kale mulkilaha '''Asli mayid barkhad''' 
-Ha ilaawin '''siyaasi ''cali yufle'''. Sidoo kale waxan kazoo beesha bahsanbuur maayirkii ugu ceerigaabo mud:xaaji xasan
+Ha ilaawin '''siyaasi ''cali yufle'''. Sidoo kale waxan kazoo beesha bahsanbuur maayiradii ugu horeeyay ceerigaabo 
+mud:xaaji xasan
+Mud: jibriil xaji ducaale
 
 ====
