*Empty MediaWiki Message*

--- a/Muuse_Shiikh_Isxaaq.mw
+++ b/Muuse_Shiikh_Isxaaq.mw
@@ -123,6 +123,7 @@ Cabdalla axmed.
 **bah awal (xasan)
 ***axmed xasan
 ***jibriil xasan
+***Cali xasan
 ***maxmed xasan
 ***ibrahim xasan
 ***maxamuud xasan
