/* Qodobada Dastuurka Faderalka */

--- a/Dastuurka_Soomaaliya.mw
+++ b/Dastuurka_Soomaaliya.mw
@@ -37,7 +37,7 @@ TUSMO
 * Qodobka 19aad. Xurmada Hoyga..................................... 6
 * Qodobka 20aad: Xorriyadda Kulanka, Bannaanbaxa, Cabashada iyo Codsi-wadareedka........ 6
 * Qodobka 21aad. Xorriyadda Isu-socodka iyo Degitaanka............. 7
-* Qodobka 22aad. Xaqa Ka-qaybgalka Siyaasadda...................... 7
+odobka 22aad. Xaqa Ka-qaybgalka Siyaasadda...................... 7
 * Qodobka 23aad. Xorriyadda xirfadda, Shaqada iyo Mihnadda......... 7
 * Qodobka 24aad: Xiriirka Shaqada.................................. 7
 * Qodobka 25aad. Deegaanka......................................... 8
