--- a/Galmudug.mw
+++ b/Galmudug.mw
@@ -1,9 +1,9 @@
 {{Coord|5|30|07|N|46|22|46|E|source:kolossus-jawiki|display=title}}
 {{Hubin}}
 {{Macluumaad maamulada Soomaaliya
-|Name = Dowladda Galmudug
+|Name = Galmudug
 |AlternateName = حكومة غالمودوغ
-|FullName = Galmudug Government
+|FullName = Dowladda Galmudug ee Soomaaliya
 |EntityAdjective = Baarlamaan
 |Official Logo = Galmudug Government of Somalia Coat of Galmudug  Government of Somalia Coat of Arms.png
 |Flag = Flag of Galmudug.svg
@@ -45,7 +45,7 @@
 |Symbol = [[File:White star on green.gif|left|30px]]{{spaces|2}}Xiddig
 |Website = https://galmudug.gov.so}}
 
-'''Galmudug Government''' ([[Arabic]]: ''غامدوغ''), ({{lang-it|Galmudugh}}, officiall '''Galmudug Government''' ''(''[[Somali language|Somali]]'': Dowladda Galmudug ee Soomaaliya)'' waa dowlad Xumin ka'ah  Jamhuuriyadda Federaalka [[Soomaaliya]], taasoo magaala madaxdeedu tahay [[Dhusamareb]]. Xarunteeda labaadna tahay [[Cadaado]] oo Ah Caasimada Baarlamaanka Dowladda Galmudug waxay xuduud la wadaagtaa dhanka waqooyi dowlad goboleedka [[Puntland]], halka dhanka galbeed ay deris kala tahay [[dhulka soomalidda ethiopia]], dhanka koonfur waxay deris la tahay dowlad goboleedka [[Hirshabelle]], iyadoo dhanka beri deris kala ah [[Badweynta Hindiya]]. 
+'''Galmudug''' ({{lang-ar|غامدوغ}}), ({{lang-it|Galmudugh}}), officiall '''Dowladda Galmudug ee Soomaaliya''' waa dowlad Xumin ka'ah  Jamhuuriyadda Federaalka [[Soomaaliya]], taasoo magaala madaxdeedu tahay [[Dhusamareb]]. Xarunteeda labaadna tahay [[Cadaado]] oo Ah Caasimada Baarlamaanka Dowladda Galmudug waxay xuduud la wadaagtaa dhanka waqooyi dowlad goboleedka [[Puntland]], halka dhanka galbeed ay deris kala tahay [[dhulka soomalidda ethiopia]], dhanka koonfur waxay deris la tahay dowlad goboleedka [[Hirshabelle]], iyadoo dhanka beri deris kala ah [[Badweynta Hindiya]]. 
 
 Waardiyaha galmudug ee la yidhaahdo ''ciidanka daraawiishta Galmudug'', waxaa loogu magac daray qaranka [[Dhulbahante]] uu [[Sayyidka]] hogaaminayay oo caasimada ahayd [[Taleex]] waqtiga gumeysiga.
 
