*Empty MediaWiki Message*

--- a/Galmudug.mw
+++ b/Galmudug.mw
@@ -7,7 +7,7 @@
 |EntityAdjective = Baarlamaan
 |Official Logo = Galmudug Government of Somalia Coat of Galmudug  Government of Somalia Coat of Arms.png
 |Flag = Flag of Galmudug.svg
-|CoatOfArms =
+|CoatOfArms = Rsz emblem.jpg
 |Map = Regioni federali Somali.png
 |OfficialLang = Soomaali <small>(''Xoogaa Carabi ah'')</small>
 |Demonym = Dowladda Galmudug<br/><br/><small>(Galmudug)</small>
@@ -42,6 +42,7 @@
 |SenateSeats = 8
 |ISOCode = SO-PL
 |Color = 
+|Motto =
 |Symbol = [[File:White star on green.gif|left|30px]]{{spaces|2}}Xiddig
 |Website = https://galmudug.gov.so}}
 
