--- a/Xasan_Barsane.mw
+++ b/Xasan_Barsane.mw
@@ -1,10 +1,41 @@
 {{Caddayn u baahan}}
 {{wargelin|Qoraalka bogan waa mid la [[tirtir]]i rabo.}}
 '''Sheekh Xasan Barsane “''' ( 1853 – 1927 ) Waxuu ahaa abaanduul oo ka mid ahaa ururka [[Urwayni]] ee [[Soomaaliyeed]]. 
-[[File:Sheekh Xasan Barsane.jpeg|right|[[File:Sheekh Xasan Barsane.jpeg|thumb]]]]
+[[File:Sheekh Xasan Barsane.jpeg|right|[[File:Sheekh Xasan Barsane.jpeg|thumb|link=Special:FilePath/Sheekh_Xasan_Barsane.jpeg]]|link=Special:FilePath/Sheekh_Xasan_Barsane.jpeg]]
 
 Sheikh Hassan Barsane waa geesi Somali Waa Halgamaagii weynaa ee ka hortagay ciidanka Gumeysiga talyaaniga,Dagaalkii kowaad ee dunida Oktober 1923,waxaa lagu xasuustaa inuu Gumeestihii [[Talyaaniga]]ku yiri, Markii warqadii Jawaabta celinta aheyd uu diraaye wuxuu hadalka ku bilaabey, Bisinka kadib, Aniga way isoo gaartey warqadaadii waana fahmey waxa eey ka koobneed oo dhan, Laakiin waa qasab inaan ku Ogaysiiyo inaan anagu adeeci doonin awaamirtaada iyo inaan ku biiri (kamidnoqon) doonin ururkaaga. Dowladiina sharci u gooni ah ayeey leedahey Anagana midlamid ah ayaanu leenahey, Mana aqbaleyno sharci aanan keena ahayn, Sharcigenuna waa sharciga Allah iyo Nabigiisa Muxammed (SCW). Anagu lama mid nihin dadka kale, Qof anaga naga mid ahna laguma qorin "Zaptie" (Quwada ama Awooda Gumeeysiga), Mana dhici doonto!!! Haddii aad dhulkeena u timaado si aad noola dagaalanto, Anaga waan kula dagaalami doonaa hab kasta iyo xeylad kastaba. Aduunkan waa mid kudhow dhamaad waxa ka harey ayaaba aad u yar. Mana dooneyno inaan ku nagaadno (joogno) Dunidaan, waxaana nooga roon inaan dhimano anaga oo difaacaneyna Sharcigeena.
 
+'''TAARIIKHDA GUUD'''
+
+Sheekh Xasan Sheekh Nuur Sheekh Axmed oo loo yaqaaney “ Sheekh Xassan Barsane “ wuxuu dhashey sanadkii 1853-kii wuxuuna ku dhashay tuulada loo yaqaan UBAADI oo u jirta qiyaas ilaa 68 Km magaalada Jowhar.
+
+Barashadiisii Quraanka kadib waxa uu cilmi u doontay  tuulo la yiraahdo “Mateey Aw Xasan” oo ku taala degmada Afgooye iyo magaalada Muqdisho, kadibna laba mar ayuu xajiyay .saddax sanno ayuuna Sucuudiga joogay. Waxa uuna Heeystay dariiqadda Saalixiyada oo ah qayb ka mid ah Axmadiyada.
+
+Sannadkii 1923 waxaa Talyaanigu Somalia waxa u soo magacaabay Governatore CESARE MARIA De VECCHI ,si uu u fidiyo xukunkii Talyaaniga ,una abuuro qorshe Talyaanigu watay oo ahaa “La Grande Somalia”. in uu wada qabsado dhamaan degaanada somalida, iyo in uu baabiyo kacdoonadii jiray berigaa, laakin waqtigaa somalidu waxa ay heeysteen hub aad u fara badan( qoraaladu badanaa waxa ay sheegayaan in huka yiil Gobalada Hiran iyo Sh/dhexe uu gaarayay 16.000 qoray(Guns). Sheekhu waxa uu ururiyaya dhalinyaro badan ,qaarkoodna waxa ay tababar ku soo qaateen dagaalkii 1aad ee aduunka oo isticmaarku qasab uga qayb galiyay.
+
+Sannadkii 1924, Sh. Xassan waxa uu isagu yeeray culumadii deegaanka,waxaana la isku raacay in laga hor yimaado xukunka Talyaaniga,waxa uuna ka jawaabay warqadii talyaanigu u soo qoray ee aheeyd in uu hubka wareejiyo asaguna isku dhiibo talyaaniga.waxa uuna u qoray talyaaniga warqad jawaab ah. Haddii wax yar aan ka soo qaato warqada oo dheereed asalkeedana carabi laga soo tarjumay.
+
+( waxa aan ku bilaabayaa magaca ALLAAH,waan helay warqadaadii waana fahmay.waxa aan kuu sheegayaa in aanan qaadaneeyn amarkaaga. Dowladaadu waxa ay leedahay sharciyadeeda , annaguna waxaan raacnaa sharciga Allaah iyo Rauulkeena Mohamed CSW,ma nihin sida ummadaha kale ee aad gumeeysatiin ,iskuma dhiibno isticmaar ,haddii aad dalkeena timaadu waa noo dagaal..”Aduunku waxa uu joogaa dhamaad ,waxaa ka haray 58 sanno, ma dooneeyno in aan aduunkaan sii joogno,waxaan door bideeynaa in aan dhimano anaga oo difaaceeyna diinteena). ” FG. Waqtigaa waxaa jiray feker culumada qaar aay qabeen oo ahaa haddii isticmaar yimaado in ay tahay calaamad Aakhiru samaan”
+
+((“In the name of Allah, most gracious, most merciful … I have received your letter and understood its contents, but must advise that we cannot obey your orders and join with you in a covenant . . .Your government has its laws, and we have ours. We accept no law other than ours. Our law is the law of Allah and his Prophet . . .We are not like other people, none of us has ever enrolled in the Zaptie (colonial forces), never! … and if you come to our land to fight against us, we will fight you with all possible means … The world is very close to its end, only 58 years remain. We don’t want to stay in this world. It is better to die while defending our laws.”))
+
+Waxaa dhacay dagaala is xigxigay oo ay guul ka soo hooyeen sh. Xassan iyo ciidamadii la socday.Talyaanigu waxa uu aad u isticmaalayay “GUUTOOYINKA GEELA” oo uu ku raran jiray madaafiicda iyo saadka kale.goobihii ugu muhimsanaa dagaaladaa Waxaa ka mid ahaa:
+
+1. Dagaalkii BUULA BURTE oo dhacay sanadkii 1922.
+
+2. Dagaalki CEEL DHEERE oo dhacey sanadihii 1922 iyo 1923.
+
+3.Dagaalkii HIILWEYNE oo dhacey sanadkii 1923.
+
+4. Dagaalkii JILYAALE oo dhacey sanadkii 1924.
+
+5. Dagaalkii HAREERILE oo dhacey sanadkii 1924. Iyo gooba kale oo dagaala culus la isaga hor yimid.
+
+Sheekh Xasan Barsane wuxu ku caan baxay inuu ciidanka ka bar bar dagaalamo isago dhiiri galin jiray. Ugu dambeeyntiina Talyaanigu waxa ay gacanta ku dhigeen Sh. Xassan oo dagaalamaya 4/April/1924.sida ku cad buugga ORIZENTO DI IMPERO ee uu qoray Mario Devechio iyo Buuga kale ee three years in Somalia ,waxaa lagu soo xiray Xabsiga dhexe ee Mogadishu, kadib markii maxkamadii isticmaarka Talyaanigu ku xakuntay 30 sannao oo xabsi ah, laakin waxa uu ku geeriyooday xabsiga dhaxdiisa 3 sanno kadib 13/January/ 1927dii. Qoraalada badankoodu waxa ay isku raaceen in uu u geeriyooday sun loogu buufiyay qolkiisa aawgeed…inkastoo la sheegay in xabsiga dhaxdiisa aad loogu jir dilay,laguna xiray qol god ahaa oo ciriiri ahaa, kaligiina uu ku jiray .
+
+ALLAH, ha u naxariistee Halgamaa Sh. Xassan Barsame waxaa lagu aasay Qubuuraha Sh. Suufi ee ku yaal magaalada Mogadishu. Mudda kadib ayaa maydkiisii dib loo qaaday waxaana dib loogu aasay deegaanka JILYAALE ee Sh/dhexe oo markii hore sheekha Xarun u aheeyd.
+
+Dowladii kacaanka ayaa si loo xasuusto halgamaagaa ugu magac dartay “Dugsiga Sare ee Sh. Xassan Barsane” oo ku yaal Bartamaha Magaalada Mogadishu.
 [[Category:Shaqsiyadaad]]
 
 == Taariikhda Urwayniya==
