--- a/Xasan_Barsane.mw
+++ b/Xasan_Barsane.mw
@@ -3,7 +3,7 @@
 '''Sheekh Xasan Barsane “''' ( 1853 – 1927 ) Waxuu ahaa abaanduul oo ka mid ahaa ururka [[Urwayni]] ee [[Soomaaliyeed]]. 
 [[File:Sheekh Xasan Barsane.jpeg|right|[[File:Sheekh Xasan Barsane.jpeg|thumb|link=Special:FilePath/Sheekh_Xasan_Barsane.jpeg]]|link=Special:FilePath/Sheekh_Xasan_Barsane.jpeg]]
 
-Sheikh Hassan Barsane waa geesi Somali Waa Halgamaagii weynaa ee ka hortagay ciidanka Gumeysiga talyaaniga,Dagaalkii kowaad ee dunida Oktober 1923,waxaa lagu xasuustaa inuu Gumeestihii [[Talyaaniga]]ku yiri, Markii warqadii Jawaabta celinta aheyd uu diraaye wuxuu hadalka ku bilaabey, Bisinka kadib, Aniga way isoo gaartey warqadaadii waana fahmey waxa eey ka koobneed oo dhan, Laakiin waa qasab inaan ku Ogaysiiyo inaan anagu adeeci doonin awaamirtaada iyo inaan ku biiri (kamidnoqon) doonin ururkaaga. Dowladiina sharci u gooni ah ayeey leedahey Anagana midlamid ah ayaanu leenahey, Mana aqbaleyno sharci aanan keena ahayn, Sharcigenuna waa sharciga Allah iyo Nabigiisa Muxammed (SCW). Anagu lama mid nihin dadka kale, Qof anaga naga mid ahna laguma qorin "Zaptie" (Quwada ama Awooda Gumeeysiga), Mana dhici doonto!!! Haddii aad dhulkeena u timaado si aad noola dagaalanto, Anaga waan kula dagaalami doonaa hab kasta iyo xeylad kastaba. Aduunkan waa mid kudhow dhamaad waxa ka harey ayaaba aad u yar. Mana dooneyno inaan ku nagaadno (joogno) Dunidaan, waxaana nooga roon inaan dhimano anaga oo difaacaneyna Sharcigeena.
+Sheikh Hassan Barsane waa geesi Soomaaliyeed, waa halgamaagii weynaa ee ka hortagay ciidanka Gumeysiga Talyaaniga, dagaalkii kowaad ee dunida Oktober 1923,waxaa lagu xasuustaa inuu Gumeestihii [[Talyaaniga]]ku yiri, Markii warqadii Jawaabta celinta aheyd uu diraaye wuxuu hadalka ku bilaabey, Bisinka kadib, Aniga way isoo gaartey warqadaadii waana fahmey waxa eey ka koobneed oo dhan, Laakiin waa qasab inaan ku Ogaysiiyo inaan anagu adeeci doonin awaamirtaada iyo inaan ku biiri (kamidnoqon) doonin ururkaaga. Dowladiina sharci u gooni ah ayeey leedahey Anagana midlamid ah ayaanu leenahey, Mana aqbaleyno sharci aanan keena ahayn, Sharcigenuna waa sharciga Allah iyo Nabigiisa Muxammed (SCW). Anagu lama mid nihin dadka kale, Qof anaga naga mid ahna laguma qorin "Zaptie" (Quwada ama Awooda Gumeeysiga), Mana dhici doonto!!! Haddii aad dhulkeena u timaado si aad noola dagaalanto, Anaga waan kula dagaalami doonaa hab kasta iyo xeylad kastaba. Aduunkan waa mid kudhow dhamaad waxa ka harey ayaaba aad u yar. Mana dooneyno inaan ku nagaadno (joogno) Dunidaan, waxaana nooga roon inaan dhimano anaga oo difaacaneyna Sharcigeena.
 
 '''TAARIIKHDA GUUD'''
 
@@ -36,6 +36,8 @@ Sheekh Xasan Barsane wuxu ku caan baxay inuu ciidanka ka bar bar dagaalamo isago
 ALLAH, ha u naxariistee Halgamaa Sh. Xassan Barsame waxaa lagu aasay Qubuuraha Sh. Suufi ee ku yaal magaalada Mogadishu. Mudda kadib ayaa maydkiisii dib loo qaaday waxaana dib loogu aasay deegaanka JILYAALE ee Sh/dhexe oo markii hore sheekha Xarun u aheeyd.
 
 Dowladii kacaanka ayaa si loo xasuusto halgamaagaa ugu magac dartay “Dugsiga Sare ee Sh. Xassan Barsane” oo ku yaal Bartamaha Magaalada Mogadishu.
+
+https://www.loohpress.com/product_info.php/products_id/1665
 [[Category:Shaqsiyadaad]]
 
 == Taariikhda Urwayniya==
