--- a/Xasan_Barsane.mw
+++ b/Xasan_Barsane.mw
@@ -3,7 +3,7 @@
 '''Sheekh Xasan Barsane “''' ( 1853 – 1927 ) Waxuu ahaa abaanduul oo ka mid ahaa ururka [[Urwayni]] ee [[Soomaaliyeed]]. 
 [[File:Sheekh Xasan Barsane.jpeg|right|[[File:Sheekh Xasan Barsane.jpeg|thumb|link=Special:FilePath/Sheekh_Xasan_Barsane.jpeg]]|link=Special:FilePath/Sheekh_Xasan_Barsane.jpeg]]
 
-Sheikh Hassan Barsane waa geesi Soomaaliyeed, waa halgamaagii weynaa ee ka hortagay ciidanka Gumeysiga Talyaaniga, dagaalkii kowaad ee dunida Oktober 1923,waxaa lagu xasuustaa inuu Gumeestihii [[Talyaaniga]]ku yiri, Markii warqadii Jawaabta celinta aheyd uu diraaye wuxuu hadalka ku bilaabey, Bisinka kadib, Aniga way isoo gaartey warqadaadii waana fahmey waxa eey ka koobneed oo dhan, Laakiin waa qasab inaan ku Ogaysiiyo inaan anagu adeeci doonin awaamirtaada iyo inaan ku biiri (kamidnoqon) doonin ururkaaga. Dowladiina sharci u gooni ah ayeey leedahey Anagana midlamid ah ayaanu leenahey, Mana aqbaleyno sharci aanan keena ahayn, Sharcigenuna waa sharciga Allah iyo Nabigiisa Muxammed (SCW). Anagu lama mid nihin dadka kale, Qof anaga naga mid ahna laguma qorin "Zaptie" (Quwada ama Awooda Gumeeysiga), Mana dhici doonto!!! Haddii aad dhulkeena u timaado si aad noola dagaalanto, Anaga waan kula dagaalami doonaa hab kasta iyo xeylad kastaba. Aduunkan waa mid kudhow dhamaad waxa ka harey ayaaba aad u yar. Mana dooneyno inaan ku nagaadno (joogno) Dunidaan, waxaana nooga roon inaan dhimano anaga oo difaacaneyna Sharcigeena.
+Sheikh Xassan Barsane waa geesi Soomaaliyeed, waa halgamaagii weynaa ee ka hortagay ciidanka Gumeysiga Talyaaniga, dagaalkii kowaad ee dunida Oktober 1923,waxaa lagu xasuustaa inuu Gumeestihii [[Talyaaniga]]ku yiri, Markii warqadii Jawaabta celinta aheyd uu diraaye wuxuu hadalka ku bilaabey, Bisinka kadib, Aniga way isoo gaartey warqadaadii waana fahmey waxa eey ka koobneed oo dhan, Laakiin waa qasab inaan ku Ogaysiiyo inaan anagu adeeci doonin awaamirtaada iyo inaan ku biiri (kamidnoqon) doonin ururkaaga. Dowladiina sharci u gooni ah ayeey leedahey Anagana midlamid ah ayaanu leenahey, Mana aqbaleyno sharci aanan keena ahayn, Sharcigenuna waa sharciga Allah iyo Nabigiisa Muxammed (SCW). Anagu lama mid nihin dadka kale, Qof anaga naga mid ahna laguma qorin "Zaptie" (Quwada ama Awooda Gumeeysiga), Mana dhici doonto!!! Haddii aad dhulkeena u timaado si aad noola dagaalanto, Anaga waan kula dagaalami doonaa hab kasta iyo xeylad kastaba. Aduunkan waa mid kudhow dhamaad waxa ka harey ayaaba aad u yar. Mana dooneyno inaan ku nagaadno (joogno) Dunidaan, waxaana nooga roon inaan dhimano anaga oo difaacaneyna Sharcigeena.
 
 '''TAARIIKHDA GUUD'''
 
