/* how it looks like the city */

--- a/Dhabbad.mw
+++ b/Dhabbad.mw
@@ -3,11 +3,7 @@ the city between[[gelisnsor]]and[[abudwak]]
 <ref[[https://www.refworld.org/docid/49a660d32.html]]</ref>
 
 == how it looks like the city==
-[
-
-
-
-Kaxandhaale
+The town of Dhabbad is one of the oldest area that was inhabited continuously over 1000 years in the region it is located (Galgaduud). It is inhabited by Wagardhac, a Marreexaan sub-clan. But it has been over populated after the Somali Civil War had broken out in 1991. Estimated inhabitants are 100 to 200 thousand people, but residents are mainly nomads in the country-side that move to the East or West in search of water and graze for their animals. It is one of the places in this region that is in abundance of rocks and stones for building.  Often times Somalis write it as Dhabad, du to their lack of spelling skills. Anybody with more concrete info about this area, please add
 
 
 
