*Empty MediaWiki Message*

--- a/Maroodi_Jeex.mw
+++ b/Maroodi_Jeex.mw
@@ -11,7 +11,7 @@
 |image_shield           = 
 |nickname               = 
 |motto                  = 
-|image_map              =Somaliland regions map Maroodi Jeeh.png
+|image_map              =Maroodijeex.svg
 |mapsize                =250px
 |map_caption            =Location in Somaliland.
 |coordinates            = {{coord|6|6|47|N|47|59|17|E|region:SO|display=inline,title}}
