*Empty MediaWiki Message*

--- a/Togdheer.mw
+++ b/Togdheer.mw
@@ -13,7 +13,7 @@
 |image_flag             = 
 |image_seal             = 
 |image_shield           = 
-|image_map              =Somaliland regions map Togdheer.png
+|image_map              =Togdheer.png
 |mapsize                =250px
 |map_caption            =Waxay Somaliland kaga taal.
 |coordinates_display    =inline,title
