*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -1,6 +1,6 @@
 [[File:Bagedi.jpg | thumb | 220x124px | right | Begedi Clansmens]]
 
-Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab)  kamid ah beelwaynta Raxaweyn Aw Digil  , Begedi wuxuu uqaybsamaa :
+Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab)  kamid ah beelwaynta Aw Digil  , Begedi wuxuu uqaybsamaa :
 
 1- [[Abaasaad]] ( Dheegle iyo Carfaale )
 
