*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -1,6 +1,6 @@
 [[File:Bagedi.jpg | thumb | 220x124px | right | Begedi Clansmens]]
 
-Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab)  kamid ah beelwaynta Aw Digil  , Begedi wuxuu uqaybsamaa :
+Beesha '''Begedi''' / Bagadi Sido kale loogu wacaa(Mucajab) waa beel  kamid ah beelwaynta Aw Digil  , Begedi wuxuu uqaybsamaa :
 
 1- [[Abaasaad]] ( Dheegle iyo Carfaale )
 
@@ -41,7 +41,7 @@ Sheikh Abdullahi Begedi
 
 6- Xil: maxamed Yusuf Xasan.
 
-7- Maal qabeenka weten Xaaji Shekh Xaaji Xuseen Axmed Iman 
+7- Maal qabeenka weyn Xaaji Shekh Xaaji Xuseen Axmed Iman 
  
 8_ Ganacsadaha weyn : 
 Cali cabdulle mayoow (shuraylle) ahna u tartame xalibaan sanadka marka uu ahaa1968. 
