*Empty MediaWiki Message*

--- a/Dhuumoodle.mw
+++ b/Dhuumoodle.mw
@@ -1,4 +1,6 @@
-[[dhuumoodle]] waa dagmo kamid ah dagmooyinka gobolka [[galgaduud]] waxeeyna hoosti maadaa maamulka galmudug waxeey 75 km dhanka bari kaxigtaa magaalada cadaado ee caasimada maamulka galmudug waxee galbeed kaxigtaa dagmada #baxdo ee gobolka galgaduud Khiyasti 10 km  waxeey baaxa deedu la eg tahay Magaalada illaa 6.5 km isku wareeg  magaalada dhaqaaleheedu waxeey kutiir san yihiin ganac siga waxeeyna ganacsi la leeda hay magaalooyin dhowra sida muqodisho boosaaso barbara hobyo galkacyo baladweyn cadaado, iyo kuwa Kale waa  magaalo dadkeedu eey dhanyihiin  1.200 kun iyo labo boqol oo qof  magaalada cimiladeedu waa dhex dhexaad  marka loofiiri yo marar badan magaaladu waa magaalo wax soo saar leh dhanka beeraha waxaana kabaxa badar somali kala duwan sida ganleeda digir sisin masago qare liin iyo nuucyo kale    
+<ref>dhuumoodle waa magaalo khadiimi ah [[Dhuumoodle]] 
+
+</ref>[[dhuumoodle]] waa dagmo kamid ah dagmooyinka gobolka [[galgaduud]] waxeeyna hoosti maadaa maamulka galmudug waxeey 75 km dhanka bari kaxigtaa magaalada cadaado ee caasimada maamulka galmudug waxee galbeed kaxigtaa dagmada #baxdo ee gobolka galgaduud Khiyasti 10 km  waxeey baaxa deedu la eg tahay Magaalada illaa 6.5 km isku wareeg  magaalada dhaqaaleheedu waxeey kutiir san yihiin ganac siga waxeeyna ganacsi la leeda hay magaalooyin dhowra sida muqodisho boosaaso barbara hobyo galkacyo baladweyn cadaado, iyo kuwa Kale waa  magaalo dadkeedu eey dhanyihiin  1.200 kun iyo labo boqol oo qof  magaalada cimiladeedu waa dhex dhexaad  marka loofiiri yo marar badan magaaladu waa magaalo wax soo saar leh dhanka beeraha waxaana kabaxa badar somali kala duwan sida ganleeda digir sisin masago qare liin iyo nuucyo kale    
 
 waxeey magaaladu ka kooban tahay illaa 6 xaafadood waxeey kala yihiin 
 
