*Empty MediaWiki Message*

--- a/Dhuumoodle.mw
+++ b/Dhuumoodle.mw
@@ -71,3 +71,4 @@ Nabbadoonada magaalada waxaa kamid ah
 Magaalada waxeey leedahay saldhig ciidan o bolis iyo  goobo waxbarasho oo aad ubadan sida schoollada oo uuw kamid yahay dhuumoodle primeri seceri school iyo jaamacado oo eey kamid tahay Jaamacada Galmudug  sidoo kale goobo Caafimaad oo muhiim ah Sida isbitaalka Guud ee dhuumoodle 
 
 Iyo sidoo kale dugsiyo Quraan Karim ah oo Fara badan. Gaara yana illaa 30 dugsi Qur,àan
+<references group="Dhuumoodle" responsive="" />
