*Empty MediaWiki Message*

--- a/Dhuumoodle.mw
+++ b/Dhuumoodle.mw
@@ -72,3 +72,4 @@ Magaalada waxeey leedahay saldhig ciidan o bolis iyo  goobo waxbarasho oo aad ub
 
 Iyo sidoo kale dugsiyo Quraan Karim ah oo Fara badan. Gaara yana illaa 30 dugsi Qur,àan
 <references group="Dhuumoodle" responsive="" />
+<references group="Degmo" responsive="" />
