--- a/Ceelafweyn.mw
+++ b/Ceelafweyn.mw
@@ -62,7 +62,7 @@
 
 
 '''Ceel-Afweyn'' '''''( El- Afwain) waxay ku taala koonfurta galbaad ee Ceerigaabo. Waxa dega beelaha '''[[Habar Jeclo]]''', '''[[Muuse Abokor]]''', 
-gaar ahan '''[[Biciide]]''' waxana khaas u daga beelaha faarax biciide '''[[beesha Baho]]''' iyo  '''[[axmed faarax(habarjeclo)]]''' iyo qaybo yar oo kamida, '''[[Reeriidle]]''', '''[[beesha Bahsanbuur]]''', '''Iidle biciide''' iyo in yar'  oo ''sacadyoonis'' ah', sidokale  Waxay  magaladu  '''leedahay Gola degaan oo ka kooba 17 xubnood. Oo u guddomiye u yahay Eng:-cabdirixin aw yusif.......magaladu.Waxay leedahay xeeb, buuraha Golis iyo banaano xoola daaqeen ah. Waxay caan ku tahay faleenka ,sida beeyada iyo malmalka. Dhulka buuraha leh waxaa jira togog durdur ah oo laga beero khudaarta oo kala duwan .Degaanka buuraleyda Guban waxaa laga helaa Dhuxul- dhagaxda oo aan weli si wacan looga faa-iidaysan iyo xabag god oo sanadahan dambe aad loola soo baxo ganacsi weyna leh. Xoolaha nool iyo ugaadha ayay degmadu hodan ku tahay. 
+gaar ahan '''[[Biciide]]''' waxana khaas u daga beelaha faarax biciide '''[[beesha Baho]]''' iyo  '''[[axmed faarax(habarjeclo)]]''' inyar oo kamida, '''[[Reeriidle]]''', '''[[beesha Bahsanbuur]]''', '''Iidle biciide''' iyo '''sacad yoonis''' ''oo ah reeka ugu badan deganaka'' ', sidokale  Waxay  magaladu  '''leedahay Gola degaan oo ka kooba 17 xubnood. Oo u guddomiye u yahay Eng:-cabdirixin aw yusif.......magaladu.Waxay leedahay xeeb, buuraha Golis iyo banaano xoola daaqeen ah. Waxay caan ku tahay faleenka ,sida beeyada iyo malmalka. Dhulka buuraha leh waxaa jira togog durdur ah oo laga beero khudaarta oo kala duwan .Degaanka buuraleyda Guban waxaa laga helaa Dhuxul- dhagaxda oo aan weli si wacan looga faa-iidaysan iyo xabag god oo sanadahan dambe aad loola soo baxo ganacsi weyna leh. Xoolaha nool iyo ugaadha ayay degmadu hodan ku tahay. 
 Ceel-Afweyn waxay hodan ku tahay : ( prehistoric artefacts including rock paintings and engravings of various styles and ages as well as many stone cairns , tumuli and other prehistoric structures.(eg.Cllark,1954,Lewis 1961) Maduno ,Godhardhane ,God-Anod are some of these sites. The rock shelter has been investigated by a number of researchers (Jonson,1983, Brandt and Brook 1984,Brandt and Carder, 1987) The vast majority of these paintings depict long-horned, humpless bovines, short-horned cows ,goats ,human figures and what possibly represent bow and arrow. a dog and sheep. 
 Sida ay sheegeen odayaasha wax garadka ah ee degaanka oo qaarna nool yihiin qaarna xijaabteen waxaa magaalada Ceel-Afweyn la aasaasay sanadka la odhan jirey Hawa- rida oo ku beegnaa 1936. Waxaa dhismihii u horeeyey meesha magaaladu hadda tahay taagey Moxamed Muuse Moxamed ( Moxamed Dheere ) oo Headman ka ahaa ilaa uu ka xijaabtey 9/2/1951 
 
@@ -71,7 +71,7 @@ Sida ay sheegeen odayaasha wax garadka ah ee degaanka oo qaarna nool yihiin qaar
 | Dalka || Somaliland
 |-
 | Gobolka || Sanaag
-|} Waxaa dega ceelafwayn faarax biciido iyo sacad yoonis ah
+|} Waxaa dega ceelafwayn faarax biciido iyo sacad yoonis
 
 == TAARIIKHDA DEGMADA ==
 === Taariikhda degmada Ceelafweyn ===
