*Empty MediaWiki Message*

--- a/Dooradsha_Burundi_2020.mw
+++ b/Dooradsha_Burundi_2020.mw
@@ -4,7 +4,7 @@
 
 {{Flag|Burundi}}
 
-[[File:Evariste Ndayishimiye (cropped).jpg|400px|Right|]]
+[[File:Evariste Ndayishimiye (cropped).jpg|400px|Right|thumb]]
 
 
 
