*Empty MediaWiki Message*

--- a/Dooradsha_Burundi_2020.mw
+++ b/Dooradsha_Burundi_2020.mw
@@ -1,11 +1,11 @@
 '''Dooradsha Burundi 2020'''
 
+[[File:Evariste Ndayishimiye (cropped).jpg|400px|Right|thumb]]
+[[File:Agathon_Rwasa.png|400px|thumb|Right|]]
+
 '''MAY 2020'''
 
 {{Flag|Burundi}}
-
-[[File:Evariste Ndayishimiye (cropped).jpg|400px|Right|thumb]]
-
 
 
 Doorashooyinkii waddanka burundi ee 2020 Afrika, laba xisbi wareega ugu dambeeya
