*Empty MediaWiki Message*

--- a/Dooradsha_Burundi_2020.mw
+++ b/Dooradsha_Burundi_2020.mw
@@ -3,7 +3,11 @@
 [[File:Evariste Ndayishimiye (cropped).jpg|400px|Right|thumb]]
 [[File:Agathon_Rwasa.png|400px|thumb|Right|]]
 
-'''MAY 2020'''
+2020
+
+*  National Assembly.[1] Évariste Ndayishimiye
+*  CNL Agathon Rwasa	
+
 
 {{Flag|Burundi}}
 
