*Empty MediaWiki Message*

--- a/Dooradsha_Burundi_2020.mw
+++ b/Dooradsha_Burundi_2020.mw
@@ -1,7 +1,7 @@
 '''Dooradsha Burundi 2020'''
 
-[[File:Evariste Ndayishimiye (cropped).jpg|400px|Right|thumb]]
-[[File:Agathon_Rwasa.png|400px|thumb|Right|]]
+[[File:Evariste Ndayishimiye (cropped).jpg|400px|Right|thumb|Évariste Ndayishimiye]]
+[[File:Agathon_Rwasa.png|400px|thumb|Right|Agathon Rwasa]]
 
 2020
 
