*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -62,7 +62,7 @@
 
 Waa [[Goobo|goob]] muhiim ah oo [[Taariikh|taariikhi]] ah maadaama ay dhacdo xadka labo dal kala qeybiya.Waxaa in yar un ujirta oo umuuqata buurta caanka ah ee Bur-dhiinle oo ah saldhig militari oo baaxad leh iyo goob taariikhi ah waxaana ay kamid ahayd meelihii ay Saameynta ballaadhan kuyeesheen dagaaladii udhaxeeyay [[Dowlad|Dawladaha]] [[Soomaaliya]] iyo [[Itoobiya]] ee 1977-dii.Buur-Cukur ayaa iyaduna deris la ah oo ka xigta dhanka Waqooyi ee Degmada [[Mustaxiil]].
 
-Gal-cusbo oo ah xarun qadiimi ah laguna yaqaano [[Barashada kumbuyuutarada|Barashada]] Cilmiga [[Diin|Diinta]] ah ahaydna xaruntii ay kasoo aas-aasantay Xerta-[[Arday|ulamadoow]] ayaa iyaduna kutaala meel aan sidaa uga fogayn tuuladani Abaaleey.Sida lawada ogsoonyahayna Dadkeedu waa [[Xoolo]]-dhaqato-[[beeraley]] ay udheertahay dhigista iyo Barista Cilmiga Diiniga ah oo meelo dhaadheer ay dadku ugaasoo xereeyaan si ay uga faa’iideystaan [[Sheekh Cumar Faaruuq|Mashaa’ishta]] waaweyn ee halkaa kusugan waxaana degta ama ay gaar utahay oo iska leh [[Qabiil|Beesha]] [[Xawaadle]] oo ah dad ah oo ku caan baxay [[Bare|Barashada]] iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan [[Bulshada Soomaaliya|bulshada]] [[Soomaaliyeed]] meel kasta oo ay [[Dunida]] ka joogaanba aadna looga haybaysto.
+Gal-cusbo oo ah xarun qadiimi ah laguna yaqaano [[Barashada kumbuyuutarada|Barashada]] Cilmiga [[Diin|Diinta]] ah ahaydna xaruntii ay kasoo aas-aasantay Xerta-[[Arday|ulamadoow]] ayaa iyaduna kutaala meel aan sidaa uga fogayn tuuladani Abaaleey.Sida lawada ogsoonyahayna Dadkeedu waa [[Xoolo]]-dhaqato-[[beeraley]] ay udheertahay dhigista iyo Barista Cilmiga Diiniga ah oo meelo dhaadheer ay dadku ugaasoo xereeyaan si ay uga faa’iideystaan [[Sheekh Cumar Faaruuq|Mashaa’ishta]] waaweyn ee halkaa kusugan waxaana degta ama ay gaar utahay oo iska leh [[Qabiil|Beesha]] [[Reer Aw Xassan|Rer Ow Xassan]] oo ah dad ku caan baxay [[Bare|Barashada]] iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan [[Bulshada Soomaaliya|bulshada]] [[Soomaaliyeed]] meel kasta oo ay [[Dunida]] ka joogaanba aadna looga haybaysto.
 
 [[Abaaley|Abaaleey]] waxa ay leedahay [[Dugsi]] Hoose-dhexe, Xarun [[Caafimaad]] [[Masaajid|,Masjid weyn]],Madaraso iyo Inbadan oo kamid ah [[Adeega Boostada Soomaaliya|Adeegyada]] [[Aasaaska Xisaabta|Aas-aasiga]] ah ee bulshada sida;Jidadka Caadiga ah iyo [[Isgaadhsiinta Soomaaliya|Isgaadhsiinta]] waxaana ka shaqeeya Khadka labada [[Wadan|Dal]] ee [[Soomaaliya]] iyo [[Itoobiya]] waana Xarun [[ganacsi]] oo isku xidha inta badan [[Gobolada Soomaaliya|gobolada]] Bariga iyo badhtamaha [[Soomaaliya]] iyo sidoo kale Gobolada [[Wabiga Shabeelle|Shabeelle]] iyo Qorraxey ee [[DDS|Dawlad Deegaanka Soomaalida]]  iyada oo dalaga iyo waxsoosaarka [[Beeraha Soomaaliya|Beeraha]] ee halkaasi kasoo go'a ay kutiirsan yihiin qaar badan oo kamid [[Bulshada Soomaaliya|Bulshada]] ku dhaqan goboladaasi.[[Dad|Dadka]] reer [[Abaaley|Abaaleey]] ayaa ah kuwa Hormuud u ah [[Nabad|nabadda]] iyo Xassiloonida deegaanadaasi waxaana ay kaalin muhiim ahi kaga jiraan sugidda [[Nabad|amniga]] [[Xuduudkii 1908|Xuduudaasi]] dheer ee labada [[Wadan|dal]] udhaxeysa oo tan iyo waxii ka danbeeyay bur-burkii [[Dowlad|Dawladnimada]] [[Soomaaliya]] ay iyagu iskood uga shaqeeynayaan una xilsaarnaayeen.
 
