*Empty MediaWiki Message*

--- a/Mudulood.mw
+++ b/Mudulood.mw
@@ -1,8 +1,5 @@
 [[MÜDÜLÖÖD]] Waa qabiil ka mid ah qabaa'ilada [{Hawiye}]  Waxay ukala baxaan {[(5*-6*)]} SHANTA Beel hosaad  oo kala ah.
-Maxamed Mudulood oo loo yaqano  (beelweeynta cabdi shiiq) waa curudkii guud ee mudulood, ciise Mudulood,oo loo yaqano (ujeejeen), Abgaal Cusmaan, Mowbleen Cusmaan, Wacdaan Cusmaan, Ilaawaay Cusmaan.
-Hilibi Daalandoolle , iyo Ciise Mudulood iyo maxamed mudulood iyo c/raxmaan mudulood oo Loyaqano "WACWETEEN" MÜDÜLÖÖD.
-
-Waxaana leesku dhahaa 4ta Ismaan Daalandoole iyo adeerkoda iyo adeera dooda.
+Maxamed Mudulood oo loo yaqano  (beelweeynta cabdi shiiq) waa curudkii guud ee mudulood, ciise Mudulood,oo loo yaqano (ujeejeen), Abgaal Cusmaan, Mowbleen Cusmaan
 
 
 Sido kalana waa qabiilka ugu badan Beesha hawiye Mudullood waxa lugu xushmeeyaa CAASIMADA Soomaaliya ee Muqadisho.
