--- a/Tumaal.mw
+++ b/Tumaal.mw
@@ -2,3 +2,7 @@
 Tumaal waa xirfad-yaqaan looga dambeeyo tumista biraha, biraha loo adeegsado mindiyaha, seefaha iwm. Sidoo kale Tumaal waxaa loo yaqaan ruuxa birta tuma laftiisa.
 
 [[Soomaalida]] waxay aaminsantahay ruux birta tuma ee jooga tuulo ama gobol iyo kan kale ee jooga degmooyinka dhamaantood in ay isku qabiil yihiin, waana dhaqan xun ee ka fog ilbaxnimada.
+
+
+
+[[Category:Farsamo]]
