*Empty MediaWiki Message*

--- a/Ciise_(qabiil).mw
+++ b/Ciise_(qabiil).mw
@@ -27,7 +27,7 @@
   | location = 
   | pages = 
   | url = http://books.google.ca/books?id=ANEwAAAAMAAJ
-  | isbn = 0-14-052365-0}}, p.169.</ref> Qabiilka Ciise wuxuu degaan ku yahay wadanka [[Djibouti]], meelo ka mid ah gobolka [[Salal]] ee hoostaga qaranka Jamhuuriyada [[Somalia]], iyo deegaanka Shinile ee [[Soomaali Galbeed]] wadanka [[Itoobiya]].
+  | isbn = 0-14-052365-0}}, p.169.</ref> Qabiilka Ciise wuxuu degaan ku yahay wadanka [[Djibouti]], meelo ka mid ah gobolka [[Salal]] ee hoostaga qaranka Jamhuuriyada [[Somaliland]], iyo deegaanka Shinile ee [[Soomaali Galbeed]] wadanka [[Itoobiya]].
 
 ==Hordhac==
 [[File:Qolxad or Jile.png|thumb|right|160px|Qolxad Waxaa caadi ahaan loo isticmaalo in dhacdooyinka dhaqanka, sida qoob, laakiin weli waa hub.]]
