*Empty MediaWiki Message*

--- a/Bartire.mw
+++ b/Bartire.mw
@@ -1,13 +1,12 @@
 '''Bartire''' waa beel ka mid ah beelaha somaliyeed ee [[Jidwaaq]], beesha waxay degtaa saddex waddan oo bariga afrika ka tirsan, sida soomaaliya, itoobiya iyo kenya .
 
-Meelaha ee dhulka soomaaliya ka degaan waxaa ka mid ah degmada [[Xagar]] ee gobolka Jubbada hoose kismayo bu'aale .Dhinaca dalka itoobiya waxaay  ka degaan magaalooyinka [[Jigjiga]]  shabeley wooble iyo mela kale Reer Cilmi Waceys Cumar Maxamuud
-3.Goboobe Xirsi Maxamuud 
+Meelaha ee dhulka soomaaliya ka degaan waxaa ka mid ah degmada [[Xagar]] ee gobolka Jubbada hoose kismayo bu'aale .Dhinaca dalka itoobiya waxaay  ka degaan magaalooyinka [[Jigjiga]]  shabeley wooble iyo Bartiraha Somalia daga waa saddex jilib oo waawayn kuwaaso la isku yiraahdo 15dab Maxamud Axmed 1.Reer Cabdille Guuleed Maxamud 2.Reer Xuseen Guuleed Maxamud 3.Reer Nuur Guuleed Maxamud 4.Reer Yusuf Guuleed Maxamud 5.Reer Axmed Guuleed Maxamuud. 1.Reer Cali Wacays Cumar Maxamuud 2.Reer Cilmi Waceys Cumar Maxamuud 3.Reer Cabdi Wacays Cumar Maxamuud 4.Reer Xuseen Wacays Cumar 5.Reer Axmed Wacays 
 1.Reer Aamin Gaboobe Maxamuud
 2.Reer Cismaan Gaboobe Maxamuud 
 3.Reer Maxamed Goboobe Xirsi Maxamuud
 4.Reer Maxamuud Gaboobe Xirsi Maxamuud
 5.Reer Xasan Gaboobe Xirsi Maxamuud 
-Waxaa kale oo deggan qabiillo kale oo Bartire ah sida reer Xirsi Garaad farah , iyo Timacase iyo Xasan Sacad iyo rer saleebaan
+Waxaa kale oo deggan qabiillo kale oo Bartire ah sida Xasan Sacad iyo  Cilmi Sacad oo ay la dhasheen 15jilib kor KU xusan iyo Reer Xirsi Garaad farah , iyo Timacase iyo iyo rer saleebaan Quwaahade
 
 == '''Bartiraha dega soomaliya''' ==
 55% waa xoolo dhaqato 20% waa magaalo joog (qaasatan Afmadow  Dhoobley kismaayo  bu'aale iyo xagar) 15% waa beeraley, 10% waaxay  ku firdhisanyihiin dhammaan aduunka oo dhan. beeshu waxay xiriir wanaagsan la leedahay beelaha kale ee dariska la ah ha ahaadeen kuwa ay abtirwadaagaan iyo kuwa kale oo ay dhaqan wadaagaanba, waxaa jira dhaqano soo jireen ah oo adag oo asalkoodu ka soo jeedawaa Abdiwali Ahmed Hussein {Adam Dubad} oo Ah hogaanka sare ee beesha bartire, waa nin Dhalinyare ah oo aad u da yar oo firficoon furfuran wax ku bartay dalka Sweden iyo dalka dalka bariga african waa nin Dhaqaalyahan ah oona ah ganacsade beesha bartire waa dad aad u dagan waa qomiyad jacel Nabada iyo Horumarka bartire waxaa ka dhashay dad halyeey ah oo la yaqaana tariikhda somalida ku Qoran
