*Empty MediaWiki Message*

--- a/Shimbiris.mw
+++ b/Shimbiris.mw
@@ -1,7 +1,7 @@
 {{gumud}}
 '''Buurta Shimbiris''' (sidoo kale loo yaqaano ''Shimbibiris'') waxaa ay dhacdaa Waqooyiga [[Soomaaliya]] gobolka [[Sanaag]].
 waana meesha ugu dheer Soomaaliya. Buurta dhirirkeeda waa 2,460 mitir, waxayna kamid tahay buuraha [[Cal Madow]].
-
+buurta shimbibiris waa fiinta ug sareysa dalka somaliya waxayna badda kasareysa 2,407M waxayna kutaal meel udhow ceerigaabo ee gobalka sanaag.
 [[Category:Juqraafiga Soomaaliya]]
 [[Category:Buuraha Soomaaliya]]
 [[Category:Buuraha Somaliland]]
