--- a/Alla-amin_Pharmacy.mw
+++ b/Alla-amin_Pharmacy.mw
@@ -1,7 +1,7 @@
 Alla-Amin Pharmacy waa Shirkada Ugu Balaadhan ee Dawooyinka Keenta ee [[Bariga Afrika]] 
 
 == Ku saabsan ==
-{{Infobox company|company_name=Alla-amin Pharmacy|logo=|company_type=Pharmaceutical|hq_location=Hargeisa,Somaliland|owner=Suleiman Hassan Obsiiye .Only|website=allaaminpharma.com|num_locations=30|revenue_year=36 million (2019)|founder=Suleiman Hassan Obsiiye|Established On=1991|num_employees=398}}
+{{Infobox company|company_name=Alla-amin Pharmacy|logo=[[File:Image9871.png.png|center|thumb|Logo Of Alla Amin]]|company_type=Pharmaceutical|hq_location=Hargeisa,Somaliland|owner=Suleiman Hassan Obsiiye .Only|website=allaaminpharma.com|num_locations=30|revenue_year=$36,000,000 (2019)|founder=Mr.Suleiman Hassan Obsiiye|Established On=31/May/1991 |num_employees=398}}
 Farmasiiga Alla-Aamin waxaa markii ugu horreysay la aasaasay 1991 si uu u bixiyo adeegyo kala duwan oo farmasiga ah. Tan iyo markaas waxay noqdeen mid ka mid ah magacyada ugu kalsoonida badan ee daryeelka farmashiyaha bukaankuna wuxuu daacadnimo aad u weyn u leeyahay farmashiyeyaashayada. Waxaa ku faanaya lahaanshaha shirkada dawooyinka ee Alla-Aamin oo ay weheliso balanqaad aan leex leexad lahayn oo ku wajahan xirfada iyo daryeelka bukaanka.
 
 Waxaan ku faaneynaa inaan isku soo bandhigno inaan nahay mid ka mid ah shirkadaha sida xowliga ah ugu koraya Soomaaliya iyo Somaliland. Qeybteenna guud waxay ku saleysan tahay magaalada weyn ee dhaqaalaha iyo magaalada weyn ee Somaliland. Waxaan cadeyney doorkeena hogaamineed ee gobolka anagoo ah wax soo dejiye, wax qeybiye iyo tafaariiqle iyadoo laga furay 15 laamood oo waaweyn magaalooyinka Hargeysa, Buroa, Boorama, Wajaale,Gaalkayo,Djibouti,jigjiga,addisabaab Garowe iyo Muqdisho.
